--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "phaser": "^3.90.0"
   },
   "devDependencies": {
+    "prettier": "3.6.2",
     "vite": "^7.2.2"
   },
   "name": "balloons-select-game",
