--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "name": "balloons-select-game",
   "description": "* Tạo cấu trúc:",
+  "homepage": ".",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
